# sailing

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  TODO  TODO.md  barnes.cpp.for  build.bat  data  index.php  mntdata  sailing.service  session.bson  start  startsailing
apps/: sailing.cpp  test_nc.c  test_sailing.cpp  test_server.c
archive/: interface.cpp  voyage.cpp  voyage.hpp  wsserver.hpp
cfsr/: CMakeLists.txt  Makefile  cfsr.c  cfsr.h  cfsr_data.c  cfsr_data.h  cfsr_ftp.c  cfsr_ftp.h  cfsr_grb2.c  cfsr_grb2.h  cfsr_grib2.c  cfsr_grib2.h  cfsr_interp.c  cfsr_interp.h  cfsr_nc.c  cfsr_nc.h  cfsr_netcdf.c  cfsr_netcdf.h  latlon.c  latlon.h  test.c  test_ftp.c  test_grib2.c  test_index.c  test_nc.c  util_ftp.c  util_ftp.h  vec2.c
cfsr/convert/: main.cpp
cfsr/example/: main.cpp
cfsr/include/: cfsr.h  cfsr_ftp.h
cfsr/src/: cfsr.c  cfsr_ftp.c  convert.c
float2/: CMakeLists.txt  float2.cpp  float2.hpp
html/: console.html  index.html
html/lib/leaflet/plugins/: L.Graticule.js
html/src/: air.js  main.css  main.js  map.js  voyage.js  ws.js
http_server/: CMakeLists.txt  simple-tcp.py
http_server/include/: connection.hpp  connection_manager.hpp  header.hpp  mime_types.hpp  reply.hpp  request.hpp  server.hpp  tcp_server.hpp
http_server/src/: connection.cpp  connection_manager.cpp  reply.cpp  request_handler.cpp  request_parser.cpp  server.cpp  tcp_server.cpp
include/: boat.hpp  browser.hpp  cfsr.h  cfsr.hpp  cfsr_ftp.h  command.hpp  csv.hpp  date.hpp  float2.hpp  html.hpp  interface.hpp  json.hpp  kml.hpp  latlon.hpp  os.h  print.hpp  sailing.hpp  server.hpp  tcp.hpp  uv.hpp  voyage.hpp  ws_server.hpp  wsserver.hpp  wssession.hpp
include/server/: connection.hpp  connection_manager.hpp  mime_types.hpp  reply.hpp  request.hpp  request_parser.hpp  server.hpp
res/: sailing.rc
src/: barnes.cpp  barnes1.for  boat.cpp  cfsr.c  cfsr.cpp  cfsr_ftp.c  command.cpp  cressman1.for  csv.cpp  csv.hpp  interface.cpp  json.cpp  kml.cpp  kml.hpp  latlon.h  main.cpp  message.cpp  message.hpp  model.cpp  model.hpp  nc_read.c  path.h  path.hpp  print.cpp  sailing.c  sailing.cpp  sailing.h  sailing.hpp  sailing_main.cpp  sailing_utils.cpp  server.cpp  server.h  session.cpp  session.hpp  tcp.cpp  util_ftp.c  uv.c  uv.h  uv.hpp  vec2.c  (+6 more)
src/cfsr/: cfsr.h  cfsr_data.c  cfsr_data.h  cfsr_nc.c  cfsr_nc.h  cfsr_util.c  cfsr_util.h
src/server/: connection.cpp  connection_manager.cpp  reply.cpp  request_handler.cpp  request_parser.cpp  server.cpp
src/ws/: myprotocol.c  myprotocol.cpp  myprotocol.h  server.h  server_msg.c  server_msg.cpp  server_msg.h  server_msg.hpp
systemd/: mntdata.service  sailing.service
ws/: Makefile  myprotocol.c  myprotocol.h  protocol.h  server.c
www/: Makefile  controls.html  index.html  main.css  package.json  switch.css
www/src/: cfsr.js  controls.html  fmod.js  format.js  info.html  latlng.html  loading.html  main.js  map.js  map_cesium.js  map_leaflet.js  offline.html  path.js  session.js  ws.js
